--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
+    "start:vm": "ng serve --host 0.0.0.0",
     "build": "ng build"
   },
   "files": [
